# financial_predictor

./: .env.example  .gitignore  FinancialPredictorAI.spec  README.md  USER_MANUAL.md  build_exe.py  deployment.md  migrate_to_e.bat  pyproject.toml  requirements.txt  run_exe_wrapper.py  run_log.txt  run_memory_backtest.py  start_app.bat  verify_mode.py
scripts/: seed_market_memory.py
src/: app.py  backtest_orchestrator.py  backtesting.py  base.py  config.py  data_merger.py  data_provider.py  exchange.py  execution.py  explainability.py  feature_engineering.py  main.py  main_phase2.py  market_analyzer.py  market_memory.py  mlp_predictor.py  model_lab.py  optimization.py  optimizer.py  pattern_analyzer.py  sentiment.py  storage.py  visualization.py  xgboost_predictor.py
src/dashboard/: layout.py  main.py  plots.py
src/pages/: 2_Market_Memory.py
src/tests/: test_execution.py  test_market_memory.py  test_mlp.py  test_pattern_analyzer.py
tests/: test_backtesting.py  test_dashboard_plots.py  test_dashboard_scope.py  test_dashboard_utils.py  test_data_layer.py  test_data_merger.py  test_feature_engineering.py  test_market_analyzer.py  test_model_lab.py  test_optimizer.py  test_xgboost_predictor.py  verify_binance.py  verify_okx.py
